improved password flow
