# backend/openapi.json
@@ -120,7 +120,15 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/Token"
+                  "anyOf": [
+                    {
+                      "$ref": "#/components/schemas/Token"
+                    },
+                    {
+                      "type": "null"
+                    }
+                  ],
+                  "title": "Response Refresh Access Token Auth Refresh Post"
                 }
               }
             }
@@ -162,13 +170,13 @@
         }
       }
     },
-    "/auth/reset-password": {
+    "/auth/reset-password/request": {
       "post": {
         "tags": [
           "Authentication"
         ],
         "summary": "Request Password Reset",
-        "operationId": "request_password_reset_auth_reset_password_post",
+        "operationId": "request_password_reset_auth_reset_password_request_post",
         "requestBody": {
           "content": {
             "application/json": {
@@ -211,33 +219,22 @@
         }
       }
     },
-    "/auth/reset-password/{token}": {
+    "/auth/reset-password": {
       "post": {
         "tags": [
           "Authentication"
         ],
         "summary": "Reset Password",
-        "operationId": "reset_password_auth_reset_password__token__post",
-        "parameters": [
-          {
-            "name": "token",
-            "in": "path",
-            "required": true,
-            "schema": {
-              "type": "string",
-              "title": "Token"
-            }
-          }
-        ],
+        "operationId": "reset_password_auth_reset_password_post",
         "requestBody": {
-          "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/NewPasswordIn"
+                "$ref": "#/components/schemas/ResetPasswordIn"
               }
             }
-          }
+          },
+          "required": true
         },
         "responses": {
           "204": {
@@ -1872,6 +1869,7 @@
         "properties": {
           "password": {
             "type": "string",
+            "minLength": 6,
             "title": "Password"
           },
           "new_password": {
@@ -2064,20 +2062,6 @@
         ],
         "title": "NameDescriptionOut"
       },
-      "NewPasswordIn": {
-        "properties": {
-          "password": {
-            "type": "string",
-            "minLength": 6,
-            "title": "Password"
-          }
-        },
-        "type": "object",
-        "required": [
-          "password"
-        ],
-        "title": "NewPasswordIn"
-      },
       "PaginatedResponse_CompanyOut_": {
         "properties": {
           "items": {
@@ -2249,6 +2233,25 @@
           "id"
         ],
         "title": "PermissionOut"
+      },
+      "ResetPasswordIn": {
+        "properties": {
+          "token": {
+            "type": "string",
+            "title": "Token"
+          },
+          "password": {
+            "type": "string",
+            "minLength": 6,
+            "title": "Password"
+          }
+        },
+        "type": "object",
+        "required": [
+          "token",
+          "password"
+        ],
+        "title": "ResetPasswordIn"
       },
       "RoleIn": {
         "properties": {
